hphp/test/slow/sealed/sealed_classes10.php.expectf
Fatal error: Class SomeTrait2 may not inherit from sealed interface (SomeInterface) without being in the whitelist in %s/hphp/test/slow/sealed/sealed_classes10.php on line 6
